--- a/week-2/websites/vanila-html/views/figmaprototype.index.html
+++ b/week-2/websites/vanila-html/views/figmaprototype.index.html
@@ -14,7 +14,7 @@
         <button class="fill-button">Register</button>
       </div>
     </nav>
-    <header class="header-wrapper">
+    <header class="header-wrapper bg">
       <div class="header-content">
 
         <h1>Welcome in Guess Game</h1>
@@ -23,7 +23,7 @@
           Try to uncover the hidden word before it's too late. Each wrong guess
           brings you closer to defeat. Can you master the challenge?
         </p>
-        <button class="fill-button">Play</button>
+       <a href="./choseDifficulty.html"> <button class="fill-button">Play</button></a>
       </div>
     </header>
   </body>
