--- a/week-2/websites/vanila-html/styles/main.css
+++ b/week-2/websites/vanila-html/styles/main.css
@@ -20,6 +20,23 @@ html{
     scroll-behavior: smooth;
 }
 
+.relative{
+    position: relative;
+}
+
+.bg{
+    background-image: url('../assets/images/image.png');
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+.flex-between{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
 .flex-3{
     display: flex;
     align-items: center;
@@ -72,10 +89,6 @@ html{
 }
 
 .header-wrapper{
-    background-image: url('../assets/images/image.png');
-    background-position: center;
-    background-size: cover;
-    background-repeat: no-repeat;
     text-align: center;
     margin: 0 auto;
     padding:  0 20px;
@@ -101,6 +114,86 @@ html{
 .header-wrapper .header-content p {
     color: white;
 }
+
+.switch {
+    position: relative;
+    height: 32px;
+    width: 300px;
+    margin: 20px auto;
+    background: #ffffff;
+    background: #ffffff;
+    border-radius: 32px;
+  }
+  .switch-label {
+    font-weight: bold;
+    position: relative;
+    z-index: 2;
+    float: left;
+    width: 100px;
+    line-height: 32px;
+    font-size: 12px;
+    color: #676a6c;
+    text-align: center;
+    cursor: pointer;
+  }
+  
+  .switch-input {
+    display: none;
+  }
+  
+  .switch-input:checked + .switch-label {
+    color: #FFF;
+    transition: 0.15s ease-out;
+    transition-property: color, text-shadow;
+  }
+  
+  .switch-input:checked + .switch-label-y ~ .switch-selector {
+    transform: translateX(0%);
+    background-color: #1AB394;
+  }
+  .switch-input:checked + .switch-label-i ~ .switch-selector {
+    transform: translateX(100%);
+    background-color: #f8ac59;
+  }
+  .switch-input:checked + .switch-label-n ~ .switch-selector {
+    transform: translateX(200%);
+    background-color: #ed5565;
+  }
+  
+  
+  .switch-selector {
+    position: absolute;
+    z-index: 1;
+    top: 0px;
+    left: 0px;
+    display: block;
+    width: 100px;
+    height: 32px;
+    border-radius: 32px;
+    background-color: #1ab394;
+    transition: all 0.3s cubic-bezier(0.18, 0.89, 0.32, 1.28);
+  }
+
+
+
+  .info-container{
+    position: absolute;
+    right: 5%;
+    top: 5%;
+    background-color: white;
+    padding: 10px;
+    border-radius: var(--borderRadius);
+    border: 1px solid transparent;
+    height: auto;
+    width: 500px;
+    z-index: 1000;
+    opacity: 0;
+    transition: .4s;
+  }
+
+  .info-icon:hover + .info-container{
+    opacity: 1;
+  }
 
 @media screen and (min-width:768px) {
     .navbar-wrapper{
